manifests/zammad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zammad
  labels:
    app: zammad
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: zammad
